--- a/bd1-todo-app/bd1-todo-core/pom.xml
+++ b/bd1-todo-app/bd1-todo-core/pom.xml
@@ -54,6 +54,12 @@
       <version>3.8.0</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>datasource</groupId>
+          <artifactId>datasource</artifactId>
+          <version>0.1.0</version>
+          <scope>compile</scope>
+      </dependency>
 
 
   </dependencies>
