--- a/bd1-todo-app/bd1-todo-mysql/pom.xml
+++ b/bd1-todo-app/bd1-todo-mysql/pom.xml
@@ -42,6 +42,12 @@
       <artifactId>HikariCP</artifactId>
       <version>${hikari.version}</version>
     </dependency>
+      <dependency>
+          <groupId>datasource</groupId>
+          <artifactId>datasource</artifactId>
+          <version>0.1.0</version>
+          <scope>compile</scope>
+      </dependency>
 
   </dependencies>
 
