--- a/bd1-todo-auth/bd1-todo-auth-api/pom.xml
+++ b/bd1-todo-auth/bd1-todo-auth-api/pom.xml
@@ -59,6 +59,12 @@
       <artifactId>HikariCP</artifactId>
       <version>${hikari.version}</version>
     </dependency>
+      <dependency>
+          <groupId>datasource</groupId>
+          <artifactId>datasource</artifactId>
+          <version>0.1.0</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
