--- a/bd1-todo-social/bd1-todo-social-api/pom.xml
+++ b/bd1-todo-social/bd1-todo-social-api/pom.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>tec.bd</groupId>
-  <artifactId>bd1-todo-api</artifactId>
+  <artifactId>bd1-todo-social-api</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>bd1-todo-api</name>
+  <name>bd1-todo-social-api</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -16,45 +17,21 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
 
-    <bd1-todo-core.version>1.0-SNAPSHOT</bd1-todo-core.version>
-    <bd1-todo-mysql.version>1.0-SNAPSHOT</bd1-todo-mysql.version>
-
-
     <gson.version>2.9.0</gson.version>
     <logback.version>1.2.3</logback.version>
-    <retrofit.version>2.3.0</retrofit.version>
     <spark.version>2.9.3</spark.version>
+    <hikari.version>5.0.1</hikari.version>
+    <mysql-connector.version>8.0.22</mysql-connector.version>
+    <retrofit.version>2.3.0</retrofit.version>
 
   </properties>
 
-  <distributionManagement>
-    <repository>
-      <id>github</id>
-      <name>GitHub OWNER Apache Maven Packages</name>
-      <url>https://maven.pkg.github.com/martinicr/bd1-todo</url>
-    </repository>
-  </distributionManagement>
-
   <dependencies>
-
-    <dependency>
-      <groupId>tec.bd</groupId>
-      <artifactId>bd1-todo-core</artifactId>
-      <version>${bd1-todo-core.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>tec.bd</groupId>
-      <artifactId>bd1-todo-mysql</artifactId>
-      <version>${bd1-todo-mysql.version}</version>
-    </dependency>
-
     <dependency>
       <groupId>com.sparkjava</groupId>
       <artifactId>spark-core</artifactId>
       <version>${spark.version}</version>
     </dependency>
-
 
     <dependency>
       <groupId>ch.qos.logback</groupId>
@@ -71,6 +48,25 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>${gson.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>${mysql-connector.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+      <version>${hikari.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
@@ -137,52 +133,5 @@
         </plugin>
       </plugins>
     </pluginManagement>
-
-    <plugins>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <configuration>
-          <finalName>todo-api</finalName>
-          <archive>
-            <manifest>
-              <addClasspath>true</addClasspath>
-              <mainClass>tec.bd.Api</mainClass>
-              <classpathPrefix>dependency-jars/</classpathPrefix>
-            </manifest>
-          </archive>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>single</goal>
-            </goals>
-            <phase>package</phase>
-            <configuration>
-              <finalName>todo-api</finalName>
-              <descriptorRefs>
-                <descriptorRef>jar-with-dependencies</descriptorRef>
-              </descriptorRefs>
-              <archive>
-                <manifest>
-                  <mainClass>tec.bd.Api</mainClass>
-                </manifest>
-              </archive>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
-    </plugins>
-
   </build>
 </project>
